--- a/quienessomos.html
+++ b/quienessomos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/main.scss">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,20 +77,15 @@
           <div class="partequienes">
                 <div class="divparrafo">
                     <h1>Quienes somos</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget enim eget tortor blandit
-                        finibus. Mauris nec justo nisl. Nam maximus elementum interdum. In hac habitasse platea
-                        dictumst. Aenean tristique sodales convallis. Vestibulum facilisis posuere justo, id feugiat
-                        arcu auctor accumsan. Morbi consectetur justo vel turpis finibus pellentesque. Etiam felis
-                        mauris, rutrum venenatis finibus eu, efficitur ut sapien. In id lorem urna. Morbi non dapibus
-                        lorem. Pellentesque sit amet tellus vitae orci eleifend sagittis non in ex. Vestibulum imperdiet
-                        ante luctus urna tristique, non pellentesque neque ultricies. Vivamus eget condimentum nisl.
-                    </p>
-                    <p>Phasellus feugiat urna tristique, lacinia est ac, maximus lectus. Nam luctus mi at enim semper
-                        sagittis. Aenean gravida id diam eu pulvinar. Nam mattis nibh orci, nec molestie diam rutrum id.
-                        Integer interdum tempor ligula non volutpat. Vivamus consequat sem quis fringilla consequat.
-                        Donec eget metus velit. Integer rutrum molestie tellus, quis sagittis libero. Nullam ac leo est.
-                        Vestibulum quis pulvinar lorem. Phasellus finibus semper interdum. Quisque vel neque eu turpis
-                        imperdiet sodales. </p>
+                    <p>Una vez, Fontanarrosa dijo que lo que soñaba para su hijo era que sus amigos sonrían al verlo llegar.
+                        Y lo cierto es que nos parece una forma hermosa de traducir la amistad. 
+                        Quizás también porque lo vinculamos al momento cuando ustedes  llegan a nuestra casa-Faro. Se trata de la alegría como puerta de entrada, muchas veces, de una gran aventura que conocemos como amistad. 
+                        En todos estos años nos hemos hecho de muchisimos amigos, muchisimos. El Faro, quizás a veces resulta de una excusa, un medio,  para seguir expandiendo estas redes de amor infinito que se tienden al momento en que nos encontramos por primera vez. 
+                        Es el lugar fundante de algo que seguimos alimentando, con muchos de ustedes, año tras año. 
+                        Por eso, va un agradecimiento y también un abrazote virtual, porque si crecemos es por la ternura y los futuros recuerdos que construimos en este lugar de las sierras cordobesas, que hemos dado en llamar El Faro de Carpier. 
+                        Asi que para ustedes: feliz día.
+                        <p>Los esperamos hoy, para celebrarnos</p>
+                        <p class="firma"> Cali, Carlos y Nico </p>
                 </div>
 
             </div>
@@ -102,6 +98,9 @@
             </div>
         </section>
 
+
+
+    </div>
 
 
     </div>
