--- a/reservas.html
+++ b/reservas.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./scss/main.scss">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,46 +67,6 @@
 
   <main class="mainformulario">
 
-
-
-    <!--      
-         <div>
-         <form action="">
-                <label  for="nombre">Nombre y apellido</label>
-                <input type="text" id="nombre" placeholder="Ej: Juan Perez" required>
-                </div>
-
-                <div>
-                <label  for="email">Email</label>
-                <input type="email" id="email" placeholder="Ej: juanperez@email.com" required>
-                </div>
-
-                <div>
-                <label for="telefono">Teléfono de contacto</label>
-                <input type="tel" id="telefono" placeholder="Ej: 353123456">
-                </div>
-
-                <div>
-                <label  for="apart">Apart</label>
-                <select name="apart" id="apart">
-
-                <option value="mono">Monoambiente</option>
-                <option value="dos">Dos Ambientes</option>
-                <option value="dosadultos">Dos Adultos</option>
-                <option value="cuatroadultos">Cuatro Adultos</option>
-                
-                </select>
-                </div>
-                <div>
-                <label for="mensaje">Mensaje</label>
-                <textarea name="Mensaje" id="mensaje" cols="30" rows="10" required></textarea>
-                </div>
-                <div>
-                <input type="submit">
-                </form>
-                </div>
-              
-        </main>-->
 
     <div class="container">
       <h1>Reservas</h1>
