--- a/servicios.html
+++ b/servicios.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/main.scss">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,6 +68,7 @@
     <main>
         <div class="container">
             <h1>Servicios</h1>
+            
             <div class="orgatarjeta">
                 <section class="secapart">
                     <div class="card" style="width: 18rem; height: 18rem;">
