--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/main.scss">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,16 +66,39 @@
     </header>
 
 
-
-
-    <!--Imagen-->
-    <section class="cuerpoindex">
-        <div class="fotohotel">
-            <!--<img  src="./assets/img/fotohotel.png" class="img-fluid"/>-->
-
+   <!--Cuerpo-->
+   <section>
+    <div class="container">
+    <div class="carrouselindex">
+        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/img/fotohotel.png" class="d-block w-100" alt="Foto Hotel">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/lavandas.jpg" class="d-block w-100" alt="Lavandas">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/noche.jpg" class="d-block w-100" alt="Faro">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-    </section>
+    </div>
+    </div>
+</section>
+
     <!--Footer-->
+
 
     <footer class="containerfluid">
 
