--- a/apart.html
+++ b/apart.html
@@ -70,42 +70,51 @@
   <!--Cuerpo-->
   <main>
     <div class="container">
-      <h1>Apart</h1>
-
-      <div class="orgatarjeta">
+        <h1>Apart</h1>
+  
         <section class="secapart">
-          <div class="card" style="width: 18rem; height: 18rem;">
-            <img class="apart" src="./assets/img/monoambiente.jpg">
-            <div class="card-body">
-              <h5 class="card-title">Monoambiente</h5>
-              <p class="parrafocard">Hasta dos personas</p>
+       
+            <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="apart" src="./assets/img/monoambiente.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Monoambiente</h5>
+                    <p class="parrafocard">Hasta dos personas</p>
+                </div>
             </div>
-          </div>
-
-
-          <div class="card" style="width: 18rem; height: 18rem;">
-            <img class="apart" src="./assets/img/dosambientes.jpg">
-            <div class="card-body">
-              <h5 class="card-title">Dos Ambientes</h5>
-              <p class="parrafocard">Hasta seis personas</p>
+  
+  
+            <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="apart" src="./assets/img/dosambientes.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Dos Ambientes</h5>
+                    <p class="parrafocard">Hasta seis personas</p>
+                </div>
             </div>
-          </div>
-
-
-          <div class="card" style="width: 18rem; height: 18rem;">
-            <img class="apart" src="./assets/img/dosadultos.jpg">
-            <div class="card-body">
-              <h5 class="card-title">Dos Adultos</h5>
-              <p class="parrafocard">Hasta dos personas</p>
+  
+  
+            <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="apart" src="./assets/img/dosadultos.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Dos Adultos</h5>
+                    <p class="parrafocard">Hasta dos personas</p>
+                </div>
             </div>
-            </div>
-          </div>
-
-        </section>
+  
+  
+            <div class="card" style="width: 18rem; height: 18rem;">
+              <img class="apart" src="./assets/img/cuatroadulto.jpg">
+              <div class="card-body">
+                  <h5 class="card-title">Cuatro Adultos</h5>
+                  <p class="parrafocard">Hasta seis personas</p>
+              </div>
+         
       </div>
     </div>
+  </div>
   </main>
-
+  
+  </section>
+  
   
 
   <!--footer-->
