--- a/quienessomos.html
+++ b/quienessomos.html
@@ -23,101 +23,110 @@
 
     <!--Header-->
 
+
     <header>
-        <img class="logo" src="./assets/img/logo.png" />
+
         <div> <a href="./index.html">
-                <h2 class="hotelelfaro">Hotel El Faro</h2>
+                <img class="logo" src="./assets/img/logoheader.png" />
             </a></div>
 
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <div class="container-fluid">
+        <section class="d-flex justify-content-end">
+            <nav class="navbar navbar-expand-lg navbar-dark ">
+                <div class="container-fluid">
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./quienessomos.html">Quienes somos</a>
-                        </li>
+                        <ul class="navbar-nav justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link " href="./quienessomos.html">Quienes somos</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./apart.html">Apart</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./apart.html">Apart</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./servicios.html">Servicios</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./servicios.html">Servicios</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./reservas.html">Reservas</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./reservas.html">Reservas</a>
+                            </li>
 
-                    </ul>
+                        </ul>
 
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </section>
     </header>
 
     <!--Cuerpo-->
-
     <div class="container">
+        <section class="contenedor">
 
+            <div clas="gparrafo">
+                <h1 style="display: none;">Quienes Somos</h1>
 
-        <section class="sectionquienes">
+                <h2>Nosotros...</h2>
 
+                <p clas="parrafoquienes">Una vez, Fontanarrosa dijo que lo que soñaba para su hijo era que sus amigos
+                    sonrían al verlo llegar.
+                    Y lo cierto es que nos parece una forma hermosa de traducir la amistad.
+                    Quizás también porque lo vinculamos al momento cuando ustedes llegan a nuestra casa-Faro. Se trata
+                    de la alegría como puerta de entrada, muchas veces, de una gran aventura que conocemos como amistad.
+                    En todos estos años nos hemos hecho de muchisimos amigos, muchisimos. El Faro, quizás a veces
+                    resulta de una excusa, un medio, para seguir expandiendo estas redes de amor infinito que se tienden
+                    al momento en que nos encontramos por primera vez.
+                    Es el lugar fundante de algo que seguimos alimentando, con muchos de ustedes, año tras año.
+                    Por eso, va un agradecimiento y también un abrazote virtual, porque si crecemos es por la ternura y
+                    los futuros recuerdos que construimos en este lugar de las sierras cordobesas, que hemos dado en
+                    llamar El Faro de Carpier.
+                </p>
+                <span>Los esperamos hoy, para celebrarnos</span>
 
-
-            
-          <div class="partequienes">
-                <div class="divparrafo">
-                    <h1>Quienes somos</h1>
-                    <p>Una vez, Fontanarrosa dijo que lo que soñaba para su hijo era que sus amigos sonrían al verlo llegar.
-                        Y lo cierto es que nos parece una forma hermosa de traducir la amistad. 
-                        Quizás también porque lo vinculamos al momento cuando ustedes  llegan a nuestra casa-Faro. Se trata de la alegría como puerta de entrada, muchas veces, de una gran aventura que conocemos como amistad. 
-                        En todos estos años nos hemos hecho de muchisimos amigos, muchisimos. El Faro, quizás a veces resulta de una excusa, un medio,  para seguir expandiendo estas redes de amor infinito que se tienden al momento en que nos encontramos por primera vez. 
-                        Es el lugar fundante de algo que seguimos alimentando, con muchos de ustedes, año tras año. 
-                        Por eso, va un agradecimiento y también un abrazote virtual, porque si crecemos es por la ternura y los futuros recuerdos que construimos en este lugar de las sierras cordobesas, que hemos dado en llamar El Faro de Carpier. 
-                        Asi que para ustedes: feliz día.
-                        <p>Los esperamos hoy, para celebrarnos</p>
-                        <p class="firma"> Cali, Carlos y Nico </p>
-                </div>
-
+                <span> Cali, Carlos y Nico</span>
             </div>
 
-            <div class="partequienes">
-
-                <div class="divimagen">
-                    <img src="./assets/img/faroquienessomos.jpg">
-                </div>
-            </div>
+            <div clas="gimagen"><img class="ingquienes" src="./assets/img/quienessomos.png"></div>
         </section>
-
-
-
-    </div>
-
-
     </div>
 
     <!--Footer-->
     <footer class="containerfluid">
 
-        <div class="container">
-            <div class="d-flex justify-content-around fs-2">
+        <ul class="nav justify-content-center">
+            <div class="menufooter">
+                <div class="d-flex justify-content-around fs-2">
 
-                <i class="bi bi-whatsapp "></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-house-door-fill"></i>
+                    <li class="nav-item">
+                        <a href="https://api.whatsapp.com/send/?phone=5493510003000&text&app_absent=0" target="_blank">
+                            <i class="bi bi-whatsapp"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.facebook.com/elfarodecarpier" target="_blank">
+                            <i class="bi bi-facebook"></i></a>
+                    </li>
 
+                    <li class="nav-item">
+                        <a href="https://www.instagram.com/elfarodecarpier/" target="_blank">
+                            <i class="bi bi-instagram"></i></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="https://g.page/elfarodecarpier?share" target="_blank">
+                            <i class="bi bi-house-door-fill"></i></a>
+                    </li>
+
+                </div>
             </div>
-        </div>
+        </ul>
 
     </footer>
 </body>
