--- a/index.html
+++ b/index.html
@@ -25,102 +25,103 @@
 
     <!--Header-->
 
-    <header class="containerfluid">
-        <img class="logo" src="./assets/img/logo.png" />
-        <h1 class="hotelelfaro">Hotel El Faro</h1>
+    <header>
+        <section class="d-flex justify-content-end">
+            <nav class="navbar navbar-expand-lg navbar-dark ">
+                <div class="container-fluid">
 
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link " href="./quienessomos.html">Quienes somos</a>
+                            </li>
 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./quienessomos.html">Quienes somos</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./apart.html">Apart</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./apart.html">Apart</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./servicios.html">Servicios</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./servicios.html">Servicios</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./reservas.html">Reservas</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./reservas.html">Reservas</a>
-                        </li>
+                        </ul>
 
-                    </ul>
-
+                    </div>
                 </div>
-            </div>
-        </nav>
-
+            </nav>
+        </section>
     </header>
 
+    <!--Cuerpo-->
 
-   <!--Cuerpo-->
-   <section>
-    <div class="container">
-    <div class="carrouselindex">
-        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/img/fotohotel.png" class="d-block w-100" alt="Foto Hotel">
+
+    <h1 style="display: none;">El Faro de Carpier</h1>
+
+
+    <section class="cuerpoindex">
+
+        <div class="container">
+            <div class="bloquelogo">
+
+                <div class="logoindex">
+                    <img class="logo1" src="./assets/img/logo.png" />
                 </div>
-                <div class="carousel-item">
-                    <img src="./assets/img/lavandas.jpg" class="d-block w-100" alt="Lavandas">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/img/noche.jpg" class="d-block w-100" alt="Faro">
+
+                <div class="botonreservar">
+
+                    <div class="d-grid gap-2 col-1 mx-auto">
+                        <a href="./reservas.html">
+                            <button class="btn btn-primary" type="button"><h2>RESERVAR</h2></button>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-    </div>
-    </div>
-</section>
+
+
+    </section>
 
     <!--Footer-->
 
-
     <footer class="containerfluid">
 
-        <!-- <nav class="menufooter">
-    <ul class="menuabajo">
-    <div><li> <img class="icono" src="./assets/img/whatsapp.png"/> 351 301 0000</li></div>
-    <div> <li> <img class="icono" src="./assets/img/facebook.png"/> Facebook</li></div>
-    <div> <li>  <img class="icono" src="./assets/img/instagram.png"/> Instagram</li></div>
-    <div><li> <img class="icono" src="./assets/img/direccion.png"/> Tanti, Córdoba</li></div>
-    </ul>
-    </nav> -->
+        <ul class="nav justify-content-center">
+            <div class="menufooter">
+                <div class="d-flex justify-content-around fs-2">
 
-        <div class="container">
-            <div class="d-flex justify-content-around fs-2">
+                    <li class="nav-item">
+                        <a href="https://api.whatsapp.com/send/?phone=5493510003000&text&app_absent=0" target="_blank">
+                            <i class="bi bi-whatsapp"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.facebook.com/elfarodecarpier" target="_blank">
+                            <i class="bi bi-facebook"></i></a>
+                    </li>
 
-                <i class="bi bi-whatsapp "></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-house-door-fill"></i>
+                    <li class="nav-item">
+                        <a href="https://www.instagram.com/elfarodecarpier/" target="_blank">
+                            <i class="bi bi-instagram"></i></a>
+                    </li>
 
+                    <li class="nav-item">
+                        <a href="https://g.page/elfarodecarpier?share" target="_blank">
+                            <i class="bi bi-house-door-fill"></i></a>
+                    </li>
+
+                </div>
             </div>
-        </div>
+        </ul>
 
     </footer>
 </body>
