--- a/reservas.html
+++ b/reservas.html
@@ -23,53 +23,60 @@
 <body>
 
   <!--Header-->
-  <header>
-    <img class="logo" src="./assets/img/logo.png" />
+  <header class="header2">
+
     <div> <a href="./index.html">
-        <h2 class="hotelelfaro">Hotel El Faro</h2>
-      </a></div>
+            <img class="logo" src="./assets/img/logoheader.png" />
+        </a></div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark ">
-      <div class="container-fluid">
+        <section class="menuarriba">
+          <nav class="navbar navbar-expand-lg navbar-dark justify-content-end">
+              
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./quienessomos.html">Quienes somos</a>
-            </li>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link " href="./quienessomos.html">Quienes somos</a>
+                    </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="./apart.html">Apart</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./apart.html">Apart</a>
+                    </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="./servicios.html">Servicios</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./servicios.html">Servicios</a>
+                    </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="./reservas.html">Reservas</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./reservas.html">Reservas</a>
+                    </li>
 
-          </ul>
+                </ul>
 
+            </div>
         </div>
-      </div>
     </nav>
+    </section>
+</header>
 
   </header>
   <!--Formulario-->
 
   <main class="mainformulario">
 
-
+<div class="espacioreservas"></div>
     <div class="container">
-      <h1>Reservas</h1>
+  <h1 style="display: none;">Reservas</h1>     
+        <h2>Reservas</h2>
+
+
       <div class="input-group mb-3">
         <span class="input-group-text">Nombre y Apellido</span>
         <input type="text" class="form-control" placeholder="Juan" aria-label="Username"
@@ -87,27 +94,30 @@
         <input type="text" class="form-control" placeholder="123456789" aria-label="Username"
           aria-describedby="basic-addon1">
       </div>
+
       <div class="btn-group">
         <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           Apart
         </button>
+
         <ul class="dropdown-menu">
           <li><button class="dropdown-item" type="button">Monoambiente</button></li>
           <li><button class="dropdown-item" type="button">Dos Ambientes</button></li>
           <li><button class="dropdown-item" type="button">Dos Adultos</button></li>
           <li><button class="dropdown-item" type="button">Cuatro Adultos</button></li>
         </ul>
+
       </div>
-
-
 
       <div class="input-group">
         <span class="input-group-text">Mensaje</span>
         <textarea class="form-control" aria-label="With textarea"></textarea>
       </div>
+
       <div class="input-group">
         <button type="button" class="btn btn-secondary">Enviar</button>
       </div>
+
     </div>
   </main>
 
@@ -116,19 +126,34 @@
   <!--Footer-->
   <footer class="containerfluid">
 
+    <ul class="nav justify-content-center">
+        <div class="menufooter">
+            <div class="d-flex justify-content-around fs-2">
 
-    <div class="container">
-      <div class="d-flex justify-content-around fs-2">
+                <li class="nav-item">
+                    <a href="https://api.whatsapp.com/send/?phone=5493510003000&text&app_absent=0" target="_blank">
+                        <i class="bi bi-whatsapp"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://www.facebook.com/elfarodecarpier" target="_blank">
+                        <i class="bi bi-facebook"></i></a>
+                </li>
 
-        <i class="bi bi-whatsapp "></i>
-        <i class="bi bi-facebook"></i>
-        <i class="bi bi-instagram"></i>
-        <i class="bi bi-house-door-fill"></i>
+                <li class="nav-item">
+                    <a href="https://www.instagram.com/elfarodecarpier/" target="_blank">
+                        <i class="bi bi-instagram"></i></a>
+                </li>
 
-      </div>
-    </div>
+                <li class="nav-item">
+                    <a href="https://g.page/elfarodecarpier?share" target="_blank">
+                        <i class="bi bi-house-door-fill"></i></a>
+                </li>
 
-  </footer>
+            </div>
+        </div>
+    </ul>
+
+</footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
