--- a/servicios.html
+++ b/servicios.html
@@ -23,95 +23,121 @@
 
     <!--Header-->
 
-    <header>
-        <img class="logo" src="./assets/img/logo.png" />
+    <header class="header2">
+
         <div> <a href="./index.html">
-                <h2 class="hotelelfaro">Hotel El Faro</h2>
+                <img class="logo" src="./assets/img/logoheader.png" />
             </a></div>
 
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <div class="container-fluid">
+            <section class="menuarriba">
+                <nav class="navbar navbar-expand-lg navbar-dark justify-content-end">
+              
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./quienessomos.html">Quienes somos</a>
-                        </li>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link " href="./quienessomos.html">Quienes somos</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./apart.html">Apart</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./apart.html">Apart</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./servicios.html">Servicios</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./servicios.html">Servicios</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="./reservas.html">Reservas</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./reservas.html">Reservas</a>
+                            </li>
 
-                    </ul>
+                        </ul>
 
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </section>
     </header>
 
     <!--Cuerpo-->
     <main>
         <div class="container">
-            <h1>Servicios</h1>
-            
-            <div class="orgatarjeta">
-                <section class="secapart">
-                    <div class="card" style="width: 18rem; height: 18rem;">
-                        <img class="apart" src="./assets/img/desayuno.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">Desayunos y Meriendas</h5>
-                        </div>
+
+            <section class="contenedorserv">
+
+                <div class="gespacioserv">
+                    <h1 style="display: none;">Servicios</h1>
+                    <h2>Servicios</h2>
+                </div>
+
+                <div class="cardserv">
+                    <img class="imgserv" src="./assets/img/desayuno.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Desayunos y Meriendas</h5>
                     </div>
+                </div>
 
 
-                    <div class="card" style="width: 18rem; height: 18rem;">
-                        <img class="apart" src="./assets/img/almuerzo.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">Almuerzos y Cenas</h5>
-                        </div>
+                <div class="cardserv">
+                    <img class="imgserv" src="./assets/img/almuerzo.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Almuerzos y Cenas</h5>
                     </div>
+                </div>
 
 
-                    <div class="card" style="width: 18rem; height: 18rem;">
-                        <img class="apart" src="./assets/img/pileta.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">Pileta</h5>
-                        </div>
+                <div class="cardserv">
+                    <img class="imgserv" src="./assets/img/pileta.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Pileta</h5>
                     </div>
+                </div>
 
-                </section>
-            </div>
+                <div class="gespacioserv">
+                </div>
+
+            </section>
         </div>
+
+
     </main>
     <!--Footer-->
 
     <footer class="containerfluid">
 
-        <div class="container">
-            <div class="d-flex justify-content-around fs-2">
+        <ul class="nav justify-content-center">
+            <div class="menufooter">
+                <div class="d-flex justify-content-around fs-2">
 
-                <i class="bi bi-whatsapp "></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-house-door-fill"></i>
+                    <li class="nav-item">
+                        <a href="https://api.whatsapp.com/send/?phone=5493510003000&text&app_absent=0" target="_blank">
+                            <i class="bi bi-whatsapp"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.facebook.com/elfarodecarpier" target="_blank">
+                            <i class="bi bi-facebook"></i></a>
+                    </li>
 
+                    <li class="nav-item">
+                        <a href="https://www.instagram.com/elfarodecarpier/" target="_blank">
+                            <i class="bi bi-instagram"></i></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="https://g.page/elfarodecarpier?share" target="_blank">
+                            <i class="bi bi-house-door-fill"></i></a>
+                    </li>
+
+                </div>
             </div>
-        </div>
+        </ul>
 
     </footer>
 </body>
