--- a/quienessomos.html
+++ b/quienessomos.html
@@ -67,6 +67,9 @@
             </div>
         </nav>
         </div>
+        <title>Hotel El Faro de Carpier | Veni a disfrutar de las Sierras de Córdoba</title>
+<meta nome="descripcion" content="Somos una familia que dedica mucho amor para que tengan una experiencia hermosa."></meta>
+
     </header>
 
     <!--Cuerpo-->
