--- a/servicios.html
+++ b/servicios.html
@@ -17,6 +17,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+        <!--SEO-->
+    <title>Hotel El Faro de Carpier | La mejor experiencia en las Sierras</title>
+    <meta nome="descripcion" content="Los esperamos en el paraiso de las Sierras Cordobesas para que sisfrutes nuestros servicios."></meta>
+    
 </head>
 
 <body>
@@ -80,7 +85,7 @@
                 <div class="cardserv">
                     <img class="imgserv" src="./assets/img/desayuno.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Desayunos y Meriendas</h5>
+                        <h3>Desayunos y Meriendas</h3>
                     </div>
                 </div>
 
@@ -88,7 +93,7 @@
                 <div class="cardserv">
                     <img class="imgserv" src="./assets/img/almuerzo.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Almuerzos y Cenas</h5>
+                        <h3 class="card-title">Almuerzos y Cenas</h3>
                     </div>
                 </div>
 
@@ -96,18 +101,18 @@
                 <div class="cardserv">
                     <img class="imgserv" src="./assets/img/pileta.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Pileta</h5>
+                        <h3 class="card-title">Pileta</h3>
                     </div>
                 </div>
 
-                <div class="gespacioserv">
-                </div>
+            
 
             </section>
         </div>
 
 
     </main>
+
     <!--Footer-->
 
     <footer class="containerfluid">
