--- a/apart.html
+++ b/apart.html
@@ -17,6 +17,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <!--SEO-->
+    <title>Hotel El Faro de Carpier | Aparts para 2 a 4 personas</title>
+    <meta nome="descripcion"
+        content="Tenemos aparts para 2 a 4 adultos, restaurante y piscina. Recibimos menores a partir de los 12 años de edad. Ver menos">
+    </meta>
+
 </head>
 
 <body>
@@ -31,7 +38,7 @@
 
         <section class="menuarriba">
             <nav class="navbar navbar-expand-lg navbar-dark justify-content-end">
-              
+
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -61,8 +68,8 @@
                     </ul>
 
                 </div>
-            </div>
-        </nav>
+                </div>
+            </nav>
         </section>
     </header>
 
@@ -81,7 +88,7 @@
                 <div class="card">
                     <img class="apart" src="./assets/img/monoambiente.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Monoambiente</h5>
+                        <h3 class="card-title">Monoambiente</h3>
                         <p class="parrafocard">Hasta dos personas</p>
                     </div>
                 </div>
@@ -89,7 +96,7 @@
                 <div class="card">
                     <img class="apart" src="./assets/img/dosambientes.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Dos Ambientes</h5>
+                        <h3 class="card-title">Dos Ambientes</h3>
                         <p class="parrafocard">Hasta seis personas</p>
                     </div>
                 </div>
@@ -98,7 +105,7 @@
                 <div class="card">
                     <img class="apart" src="./assets/img/dosadultos.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Dos Adultos</h5>
+                        <h3 class="card-title">Dos Adultos</h3>
                         <p class="parrafocard">Hasta dos personas</p>
                     </div>
                 </div>
@@ -107,7 +114,7 @@
                 <div class="card">
                     <img class="apart" src="./assets/img/cuatroadulto.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Cuatro Adultos</h5>
+                        <h3 class="card-title">Cuatro Adultos</h3>
                         <p class="parrafocard">Hasta seis personas</p>
                     </div>
 
@@ -115,9 +122,12 @@
 
                     <div class="gespacioapart"></div>
                 </div>
+            </section>
+        </div>
+        
     </main>
 
-    </section>
+
 
 
 
