--- a/servicios.html
+++ b/servicios.html
@@ -79,8 +79,9 @@
         <div class="container">
 
             <section class="cuerposervicios">
-                <div class="espacioserv"></div>
-                <div class="espacioserv"></div>
+               
+               <div class="espacioserv1"></div>
+
                 <div class="tituloserv">
                     <h1 style="display: none;">Servicios</h1>
                     <h2 class="titserv">Servicios</h2>
@@ -88,51 +89,50 @@
                 </div>
 
                 <div class="carrouselserv">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                   
+
+                    <div id="carouselExampleCaptions" class="carousel slide align-middle" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
-
                         <div class="carousel-inner">
-                            <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="./assets/img/desayuno.jpg" class="d-block w-100" alt="Desayuno y Merienda">
-                                <div class="carousel-caption d-md-block">
-                                    <h3 class="h3serv">Desayunos y Meriendas</h3>
-                                </div>
+                          <div class="carousel-item active">
+                            <img src="./assets/img/desayuno.jpg" class="d-block w-100" alt="Desayunos y meriendas">
+                            <div class="textoserv carousel-caption d-none d-md-block">
+                              <h3>Desayunos y meriendas</h3>
+                              <p>Lun a Dom de 8.30 a 12hs y de 16 a 20hs</p>
                             </div>
-
-                            <div class="carousel-item" data-bs-interval="2000">
-                                <img src="./assets/img/almuerzo.jpg" class="d-block w-100" alt="Almuerzos y Cenas">
-                                <div class="carousel-caption d-md-block">
-                                    <h3 class="h3serv">Almuerzos y Cenas</h3>
-
-                                </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./assets/img/almuerzo.jpg" class="d-block w-100" alt="Almuerzos y cenas">
+                            <div class="textoserv carousel-caption d-none d-md-block">
+                              <h3>Almuerzos y cenas</h3>
+                              <p>SLun a Dom de 12.30 a 15hs y de 20 a 23hs</p>
                             </div>
-
-                            <div class="carousel-item">
-                                <img src="./assets/img/pileta.jpg" class="d-block w-100" alt="Pileta">
-                                <div class="carousel-caption d-md-block">
-                                    <h3 class="h3serv">Pileta</h3>
-                                </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./assets/img/pileta.jpg" class="d-block w-100" alt="Pileta">
+                            <div class="textoserv carousel-caption d-none d-md-block">
+                              <h3>Pileta</h3>
+                              <p>Lun a Dom. de 8.30 a 21hs</p>
                             </div>
-
-
-
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                              </button>
-                              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                              </button>
+                          </div>
                         </div>
-
-                    </div>
+                        <button class="botonserv carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="botonserv carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
-                <div class="espacioserv"></div>
+
+                <div class="espacioserv2"></div>
+
             </section>
 
     </main>
